--- a/frontend/static/index.html
+++ b/frontend/static/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document Processing Application</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Cleric Document Facts Summary with GPT-4 Integration</title>
+    <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Document Processing Application</h1>
+        <h1>Cleric's GPT-4 Powered Call Logs Facts Summarizer</h1>
         <div class="input-screen">
             <label for="question">Question:</label>
             <input type="text" id="question" required>
@@ -21,6 +21,6 @@
         <div class="output-screen" id="results"></div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="/static/script.js"></script>
 </body>
 </html>
